# codec-share

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  readme.md
include/: _container.hpp  _decoder.hpp  _encoder.hpp  _token.hpp  container.hpp  container_.hpp  decoder.hpp  decoder_.hpp  encoder.hpp  encoder_.hpp  engine.hpp  random.hpp  stamp.hpp  stream.hpp  tensor.hpp  token.hpp  token_.hpp
include/detail/: combine.hpp  copy.hpp  gf8.hpp  solve.hpp
include/helpers/: _combine.hpp  _gf8.hpp  _solve.hpp  combine.hpp  combine_.hpp  copy.hpp  gf8.hpp  gf8_.hpp  number.hpp  solve.hpp  solver.hpp  solver_.hpp  traits.hpp
source/: container.hpp  engine.cpp  engine.hpp  stamp.cpp  token.cpp
src/: _test_codec.cpp  coder.cpp  engine.cpp  main.cpp  run_demo.cpp  stream.cpp  test_codec.cpp  test_codec_.cxx  test_seed.cpp  test_solver.cpp  token.cpp
src/demo/: helpers.hpp  input.hpp  run.cpp
src/math/: builder.hpp  gf8.hpp  solver.hpp
test/: CMakeLists.txt
test/src/: codec_share_container_test.cpp  codec_share_stream_test.cpp  codec_share_test.cpp
